[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catchem-process-generator"
version = "2.0.0"
description = "CATChem Process Generator Tool - Generate standardized atmospheric chemistry process implementations"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "CATChem Development Team", email = "catchem-dev@noaa.gov"},
]
maintainers = [
    {name = "CATChem Development Team", email = "catchem-dev@noaa.gov"},
]
keywords = [
    "atmospheric-chemistry",
    "code-generation",
    "fortran",
    "chemistry-processes",
    "catchem",
    "earth-system-modeling"
]t
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Software Development :: Code Generators",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "PyYAML>=6.0",
    "Jinja2>=3.1.0",
    "click>=8.0.0",
    "pathlib-mate>=1.0.0",
    "colorama>=0.4.4",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "twine>=4.0.0",
    "build>=0.10.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-mock>=3.10.0",
    "pyfakefs>=5.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "sphinx-autodoc-typehints>=1.22.0",
    "myst-parser>=1.0.0",
]
validation = [
    "jsonschema>=4.17.0",
    "yamllint>=1.29.0",
    "fortls>=2.13.0",  # Fortran Language Server for validation
]

[project.urls]
Homepage = "https://github.com/bbakernoaa/catchem"
Documentation = "https://github.com/bbakernoaa/catchem/tree/main/docs"
Repository = "https://github.com/bbakernoaa/catchem.git"
Issues = "https://github.com/bbakernoaa/catchem/issues"
Changelog = "https://github.com/bbakernoaa/catchem/blob/main/CHANGELOG.md"

[project.scripts]
catchem-process-generator = "process_generator:main"
generate-process = "process_generator:generate_process_cli"
validate-process = "process_generator:validate_process_cli"

[tool.setuptools]
packages = ["process_generator"]
package-dir = {"process_generator" = "."}

[tool.setuptools.package-data]
process_generator = [
    "templates/*.j2",
    "templates/**/*.j2",
    "configs/*.yaml",
    "schemas/*.json",
]

# Python code formatting with Black
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | generated
)/
'''

# Import sorting with isort
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# Linting with flake8
[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "E501"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".tox",
    "generated"
]

# Type checking with mypy
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "yaml.*",
    "jinja2.*",
]
ignore_missing_imports = true

# Testing with pytest
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=process_generator",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "template: Template generation tests",
    "validation: Configuration validation tests",
]

# Test coverage
[tool.coverage.run]
source = ["process_generator"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Documentation with Sphinx
[tool.sphinx]
source-dir = "docs"
build-dir = "docs/_build"

# Pre-commit hooks configuration
[tool.pre-commit]
repos = [
    {repo = "https://github.com/pre-commit/pre-commit-hooks", rev = "v4.4.0"},
    {repo = "https://github.com/psf/black", rev = "23.1.0"},
    {repo = "https://github.com/pycqa/isort", rev = "5.12.0"},
    {repo = "https://github.com/pycqa/flake8", rev = "6.0.0"},
    {repo = "https://github.com/pre-commit/mirrors-mypy", rev = "v1.0.1"},
]
